<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.honey.activitypractise.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
<ImageView
    android:id="@+id/imageview"
    android:layout_width="match_parent"
    android:layout_height="150dp" />
    <Button
        android:id="@+id/maps_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_maps"
       />
    <Button
        android:id="@+id/netflix_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/launch_netflix"
        />
    <Button
        android:id="@+id/email_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        />
    <Button
        android:id="@+id/camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        />
    <Button
        android:id="@+id/dial_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        />
    <Button
        android:id="@+id/call_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/call"
        />
    <Button
        android:id="@+id/sendImage_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_image"
        /></LinearLayout>
</ScrollView>
